[workspace]
members = ["photondb", "photondb-tools"]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["The PhotonDB Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photondb"

[workspace.dependencies]
photonio = { git = "https://github.com/zojw/photonio.git", branch = "test_b", features = ["tokio"] }

[profile.bench]
debug = true

[profile.release]
debug = true
